--- a/style.css
+++ b/style.css
@@ -3,17 +3,20 @@
     padding: 0;
 }
 body{
-    background-color:black;
+    background-color:#cacaca;
     font-family:'Times New Roman', Times, serif;
     width:100%;
+    height: 100vh;
+    background:linear-gradient(#2196f3,#e91e63);
 }
 
 h1{
-    padding: 5px;
+    /* padding: 5px; */
     color:white;
     text-align: center;
     justify-content: center;
     border:2px solid white;
+    font-family: 'Arial Narrow Bold',sans-serif;
     border-radius: 10px;
     background-image: linear-gradient(to right,rgb(240, 66, 23) ,rgb(43, 41, 168),rgb(240,66,23));
 }
@@ -27,21 +30,28 @@ label,span{
     font-size: 15px;
     font-weight: 900;
     color:white;
+    font-family: 'Arial Narrow Bold', sans-serif;
+    color: white ;
 }
 
 input{
-    background-color:rgb(43,41,168) ;
+    background-color:#c10037 ;
     color: white;
+    border: none;
+    padding: 7px;
+    font-weight: 700;
 }
 
 button{
     margin-left:100px;
+    margin-top: 10px;
     padding: 5px;
     font-size: 15px;
     font-weight: 700;
     border-radius: 10px;
     color: white;
-    background-color:rgb(43,41,168);
+    background-color:#c10037;
+    border: none;
 }
 
 #canvas{
@@ -51,4 +61,42 @@ button{
     align-items: center;
     border:2px solid white;
     border-radius: 10px;
+    background:transparent;
+   
 } 
+@media screen and (max-width:1140px){
+ body{
+    width: 100%;
+ }
+ h1{
+    width:100% ;
+ }
+ .container{
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+ }
+
+}
+
+@media screen and (max-width:545px){
+    body{
+        width: 100%;
+    }
+ h1{
+    width: 100%;
+ }
+ .container{
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    margin: 10px;
+   
+ }
+ button{
+    margin: 0%;
+    margin-left: 20px;
+ }
+}
